Update Ex-7. image uploading & displaying using mysql.html

--- a/Ex-7. image uploading & displaying using mysql.html
+++ b/Ex-7. image uploading & displaying using mysql.html
@@ -122,7 +122,7 @@
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;echo "&lt;a href='delete_img.php?id=" . $one['id'] . "'&gt; Delete &lt;/a&gt; &lt;br&gt;"; <br>
 
                 &nbsp;&nbsp;&nbsp;}<br>
-                &nbsp;&nbsp;&nbsp;mysqli_close($conn);<br>
+                &nbsp;&nbsp;&nbsp;mysqli_close($con);<br>
 
                 ?&gt;<br>
                 &lt;/body&gt;<br>
