--- a/Ex-7. image uploading & displaying using mysql.html
+++ b/Ex-7. image uploading & displaying using mysql.html
@@ -63,7 +63,7 @@
                 &nbsp;&nbsp;&nbsp; $con =
                 mysqli_connect("localhost","root","","my_db") or die(mysqli_connect_error());<br>
                 &nbsp;&nbsp;&nbsp; <br>
-                &nbsp;&nbsp;&nbsp; $olds = mysqli_query($conn, "SELECT * FROM images");<br>
+                &nbsp;&nbsp;&nbsp; $olds = mysqli_query($con, "SELECT * FROM images");<br>
                 &nbsp;&nbsp;&nbsp; <br>
                 &nbsp;&nbsp;&nbsp; if(isset($_POST['submit'])) { <br>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; if(empty($_FILES['image']['name'])) { <br>
