Update Ex-7. image uploading & displaying using mysql.html

--- a/Ex-7. image uploading & displaying using mysql.html
+++ b/Ex-7. image uploading & displaying using mysql.html
@@ -54,7 +54,7 @@
 &nbsp;&nbsp;&nbsp; &lt;form action="image.php" method="POST" enctype="multipart/form-data"&gt;<br>
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; File : <br>
 &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &lt;input type="file" name="image"&gt; <br>
-&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &lt;input type="submit" value="Upload"&gt;<br>
+&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &lt;input type="submit" name="submit" value="Upload"&gt;<br>
 &nbsp;&nbsp;&nbsp; &lt;/form&gt;<br>
 &nbsp;&nbsp;&nbsp; <br>
 &nbsp;&nbsp;&nbsp; &lt;?php<br>
