--- a/Ex-7. image uploading & displaying using mysql.html
+++ b/Ex-7. image uploading & displaying using mysql.html
@@ -22,7 +22,7 @@
             <ul>
               <li><a href="http://jun.hansung.ac.kr/SWP/PHP/examples/image.php">image.php</a> : local 컴퓨터에 있는
                 image 파일을 서버에 업로드 하기 위한 form 요소와 완료되었을 때 get.php 를 이용하여 해당 image
-                를 가져와 보여줌. (More complete source code) : <a href="./examples/image.txt"> image.php <a> </li>
+                를 가져와 보여줌. </li>
               <li>get.php&nbsp; : 전달 받은 image&nbsp; 파일 이름에 해당하는 이미지를 DB에서 추출해
                 전달하는 역활을 함</li>
               <li>delete.php&nbsp; : DB에서 해당하는 이미지를 삭제합니다.
