Update Ex-7. image uploading & displaying using mysql.html

--- a/Ex-7. image uploading & displaying using mysql.html
+++ b/Ex-7. image uploading & displaying using mysql.html
@@ -115,7 +115,7 @@ src='get.php?name=$image_name'&gt;";<br>
 &nbsp;&nbsp;&nbsp;echo "&lt;h2> Previously Uploaded Pictures &lt;/h2&gt;";<br>
 &nbsp;&nbsp;&nbsp;while ( $one = mysqli_fetch_array($olds) ) {<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;echo "&lt;img src='data:image/jpeg;base64," . base64_encode($one['data']) . "' width=250 height=200 /&gt;" ;<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;echo "&lt;a href='delete_img.php?id=" . $one['id'] . "'&gt; Delete &lt;/a&gt; &lt;br&gt;"; <br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;echo "&lt;a href='delete.php?id=" . $one['id'] . "'&gt; Delete &lt;/a&gt; &lt;br&gt;"; <br>
 
 &nbsp;&nbsp;&nbsp;}<br>
 &nbsp;&nbsp;&nbsp;mysqli_close($con);<br>
