Update Ex-6. PHP registration with MySQL.html

--- a/Ex-6. PHP registration with MySQL.html
+++ b/Ex-6. PHP registration with MySQL.html
@@ -284,7 +284,7 @@
             Extra : 아래의 코드(admin_login.php)는 admin 권한으로 로그인 하게 해주며, 성공시 사용자 리스트를
             보여준다. (추가로 admin 테이블이 필요)<br>
             <br>
-            <img alt="" src="admin_login.png"><br>
+            <img alt="" src="images/admin_login.png"><br>
             <br>
             <div class="code notranslate">
               <div> &lt;?php<br>
@@ -299,7 +299,7 @@
             users_db.users 테이블 자료를 테이블 형식으로 보여주며, 링크로 사용자 제거가 가능하게
             한다.&nbsp;&nbsp; <br>
             <br>
-            <img alt="" src="admin_users.png"><br>
+            <img alt="" src="images/admin_users.png"><br>
             <br>
             <div class="code notranslate">
               <div> &lt;?php<br>
