--- a/SWP_peer_grade_Midterm.html
+++ b/SWP_peer_grade_Midterm.html
@@ -53,7 +53,7 @@
 (0/5/10) <b> 자료 업로드</b>: 샘플 자료 양 : NO <input type="radio" name="a9" value="0" onchange="assign(this,0)" checked=""> / 적음(20개 미만)  <input type="radio" name="a9" value="0" onchange="assign(this,5)"> / 충분(30개 이상)  <input type="radio" name="a9" value="0" onchange="assign(this,10)"> /<br>
 
 
- <input type="button" value="sum" onclick="sum.value=parseInt(a1.value)+parseInt(a2.value)+parseInt(a3.value)+parseInt(a31.value)+parseInt(a32.value)+parseInt(a33.value)+parseInt(a4.value)+parseInt(a5.value)+parseInt(a6.value)+parseInt(a7.value)+parseInt(a8.value)+parseInt(a9.value)+parseInt(a10.value)">  =   <output name="sum" id="sum" for="a1 a2 a3 a31 a32 a33 a4 a5 a6 a7 a8 a9 a10 a11">0</output>
+ <input type="button" value="sum" onclick="sum.value=(parseInt(a1.value)+parseInt(a2.value)+parseInt(a3.value)+parseInt(a31.value)+parseInt(a32.value)+parseInt(a33.value)+parseInt(a4.value)+parseInt(a5.value)+parseInt(a6.value)+parseInt(a7.value)+parseInt(a8.value)+parseInt(a9.value)+parseInt(a10.value))/1.3">  =   <output name="sum" id="sum" for="a1 a2 a3 a31 a32 a33 a4 a5 a6 a7 a8 a9 a10 a11">0</output>
    
 </form>
 
